compiler/testdata/invalid/type_no_brace.pr
// Type declaration without braces.
type Foo
